@@ -1,6 +1,6 @@
 {
   "id": "channel.be",
-  "version": "5.1.2",
+  "version": "5.1.3",
   "textures": {
     "channel.be.een/eenfanart.jpg": "e99a7f7c68c19f3f8575ff50a75f60fc",
     "channel.be.ketnet/ketnetfanart.jpg": "51d20f0bb359833c1f26234021c371ab",
